# Axon

./: AgentLang_Specification_v1.0.md  CONFORMANCE_MATRIX.md  Cargo.toml  KNOWN_LIMITATIONS.md  RC_CHECKLIST.md  README.md  RELEASE_MANIFEST.md  RELEASE_NOTES_v0.1.0-rc1.md  RELEASE_NOTES_v0.1.0-rc3.md  ROADMAP.md  conformance_matrix.json  install.sh
.github/workflows/: ci.yml  release.yml
crates/al-ast/: Cargo.toml
crates/al-capabilities/: Cargo.toml
crates/al-checkpoint/: Cargo.toml
crates/al-cli/: Cargo.toml
crates/al-cli/src/: main.rs
crates/al-cli/tests/: cli_integration.rs  smoke_tests.rs
crates/al-conformance/: Cargo.toml
crates/al-conformance/src/: lib.rs
crates/al-conformance/tests/: conformance.rs
crates/al-diagnostics/: Cargo.toml
crates/al-hir/: Cargo.toml
crates/al-lexer/: Cargo.toml
crates/al-parser/: Cargo.toml
crates/al-runtime/: Cargo.toml
crates/al-runtime/src/: interpreter.rs  lib.rs
crates/al-types/: Cargo.toml
crates/al-types/src/: lib.rs
examples/: agent_capabilities.al  arithmetic.al  assert_verify.al  boolean_logic.al  calculate.al  checkpoint_state.al  collatz.al  data_pipeline.al  delegate_task.al  early_exit.al  escalate_error.al  factorial.al  fibonacci.al  filter_map_reduce.al  fork_join.al  gcd.al  list_operations.al  loop_sum.al  map_access.al  match_boolean.al  match_literals.al  match_result.al  nested_match.al  philosophy_audit_trail.al  philosophy_capabilities.al  philosophy_delegation.al  philosophy_fault_tolerance.al  philosophy_immutability.al  philosophy_pipelines.al  philosophy_verification.al  pipeline_chain.al  power.al  schema_types.al  string_ops.al  verification_by_construction.al
specs/: AgentLang_Specification_v1.0.md  CLAUDE_FINAL_VALIDATION_2026-02-23.md  CLAUDE_ROUND4_EXEC_ADVISORY_2026-02-24.md  CLI_DISTRIBUTION.md  CODEX_IMPLEMENTATION_REVIEW_2026-02-23.md  CODEX_REVIEW_2026-02-23.md  CODEX_REVIEW_RUST_PLAN_2026-02-23.md  CONFORMANCE_ACCEPTANCE_CRITERIA.md  GRAMMAR_MVP.ebnf  IMPLEMENTATION_ROADMAP_NEXT.md  IMPLEMENTATION_ROUND1_SUMMARY_2026-02-23.md  IMPLEMENTATION_ROUND3_SUMMARY_2026-02-24.md  IMPLEMENTATION_ROUND4_SUMMARY_2026-02-24.md  IMPLEMENTATION_ROUND5_SUMMARY_2026-02-24.md  IMPLEMENTATION_ROUND6_SUMMARY_2026-02-24.md  IMPLEMENTATION_ROUND7_SUMMARY_2026-02-24.md  IMPLEMENTATION_ROUND9_SUMMARY_2026-02-25.md  MVP_PROFILE.md  README.md  RUST_IMPLEMENTATION_PLAN_2026-02-23.md  RUST_READINESS_AUDIT.md  SPEC_LOCK_SUMMARY_2026-02-23.md  STDLIB_MVP_SIGNATURES.json  claude_full_review.md  claude_opinion.txt  codex_opinion.txt  codex_validation_and_plan.md  formal_semantics.md  review_formal_from_api.md  review_stdlib_from_semantics.md  stdlib_spec.md  stdlib_spec_mvp.md
(+27 files in other folders)
