[package]
name = "al-conformance"
version.workspace = true
edition.workspace = true

[dependencies]
al-diagnostics = { path = "../al-diagnostics" }
al-ast = { path = "../al-ast" }
al-lexer = { path = "../al-lexer" }
al-parser = { path = "../al-parser" }
al-types = { path = "../al-types" }
al-hir = { path = "../al-hir" }
al-vc = { path = "../al-vc" }
al-capabilities = { path = "../al-capabilities" }
al-runtime = { path = "../al-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "conformance"
path = "tests/conformance.rs"
