[package]
name = "al-types"
version.workspace = true
edition.workspace = true

[dependencies]
al-diagnostics = { path = "../al-diagnostics" }
al-ast = { path = "../al-ast" }
al-capabilities = { path = "../al-capabilities" }
al-hir = { path = "../al-hir" }
al-vc = { path = "../al-vc" }

[dev-dependencies]
al-parser = { path = "../al-parser" }
proptest = { workspace = true }
